--- a/src/main-window.ui
+++ b/src/main-window.ui
@@ -2,7 +2,13 @@
 <interface>
   <template class="FGenAppWindow" parent="GtkApplicationWindow">
     <property name="title">Function Generator</property>
+    <property name="border-width">10</property>
     <property name="default-width">600</property>
     <property name="default-height">400</property>
+    <child>
+      <object id="func" class="FunctionDisplay">
+        <property name="visible">True</property>
+      </object>
+    </child>
   </template>
 </interface>
